ventures/cratefield-waitlist/src/snapshots/cratefield_waitlist__tests__confirm_subject.snap
---
source: ventures/cratefield-waitlist/src/lib.rs
expression: rendered.subject
---
Confirm your spot on the Cratefield waitlist
