ventures/cratefield-waitlist/src/snapshots/cratefield_waitlist__tests__confirmed_subject.snap
---
source: ventures/cratefield-waitlist/src/lib.rs
expression: rendered.subject
---
You are #42 on the Cratefield waitlist
