ventures/cratefield-waitlist/src/snapshots/cratefield_waitlist__tests__confirmed_text.snap
---
source: ventures/cratefield-waitlist/src/lib.rs
expression: rendered.text
---
You are #42

Your spot on the Cratefield waitlist is confirmed. You are number 42 in line.

Check my place:
https://api.cratefield.com/v1/waitlist/status?token=def

--
Sent to ada@example.com because you confirmed your spot on the Cratefield waitlist.
Cratefield · https://cratefield.com · hello@cratefield.com
